<resources>
    <string name="app_name">RecyclerView</string>
    <string name="btn_add_tittle">Add person</string>
    <string name="btn_create">Create</string>
    <string name="fields_is_empty">Type your name and phone number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
</resources>
